syntax = "proto3";

package com.road.yishi.proto.campaign;

message HangupStateMsg {
  int32 curCount = 1;
  int32 campaignId = 2;
}
